# mongo

./: .bazelrc  MODULE.bazel  WORKSPACE.bazel
src/mongo/db/modules/enterprise/: .eslintrc.yml  .git-blame-ignore-revs  BUILD.bazel  CPPLINT.cfg  OWNERS.yml  README  README.md  SConscript  build.py  snmp.cpp
src/mongo/db/modules/enterprise/autogenerated_targets/: placeholder.txt
src/mongo/db/modules/enterprise/distsrc/: BUILD.bazel  LICENSE-Enterprise.rtf  LICENSE-Enterprise.txt  LICENSE.rtf  LICENSE.txt  THIRD-PARTY-NOTICES.windows
src/mongo/db/modules/enterprise/docs/: MONGO-MIB.txt  MONGOD-MIB.txt  OWNERS.yml  README-snmp.txt  enterprise_security_guide.md  mongod.conf  mongod.conf.subagent  snmp.md
src/mongo/db/modules/enterprise/docs/fle/: fle_compaction.md  fle_protocol.md  fle_range.md  fle_string_search.md  query_architecture.md
src/mongo/db/modules/enterprise/docs/testing/: jepsen.md  jstestfuzz-minimizer.md
src/mongo/db/modules/enterprise/jstests/aggregation/: lookup1.js
src/mongo/db/modules/enterprise/jstests/audit/: SERVER-36070.js  application_message.js  audit.js  audit_config_upgrade_downgrade.js  audit_decryptor.js  audit_interface.js  audit_jstest_placeholder.js  audit_read_from_sharded_secondaries.js  audit_remote_local_intermediate.js  audit_runtime_config.js  auth_no_dbdirect.js  authenticate.js  cluster_server_parameters.js  create-update-user-role.js  crud-user-role-direct.js  ddl-ops.js  filter.js  impersonated_user_metadata_edge_cases.js  kill_cursors.js  kill_cursors_entry.js  log_contains_header.js  log_file_integrity.js  log_has_framing_protocol.js  log_is_base64.js  log_query_stats.js  log_rotate_command_errors.js  log_rotate_command_test.js  log_rotate_startup.js  log_rotate_test.js  log_separate_header.js  logout.js  metadata.js  no_spec_auth_fail_audit_log.js  no_spec_auth_fail_audit_log_x509.js  ocsf_audit_remote_local_intermediate.js  ocsf_authcheck.js  ocsf_authentication_activity.js  ocsf_create_update_user_role.js  ocsf_entity_management.js  ocsf_network_activity.js  (+13 more)
src/mongo/db/modules/enterprise/jstests/encryptdb/: database_key_rollover.js  database_key_upgrade.js  decrypt_tool.js  encrypt_backup_cursor.js  encrypt_incremental_backup_cursor.js  encrypt_index_build.js  encrypt_keyfile.js  encrypt_write_and_persist.js  full_hot_backup_restore.js  full_hot_backup_restore_keystore.js  ignore_replicated_encryption_options.js  kmip.js  kmip_activate_rollover_rotate.js  kmip_key_periodic_job.js  kmip_key_state.js  kmip_make_key.py  kmip_manage_key.py  kmip_server.py  many_databases.js  server_63070.js
src/mongo/db/modules/enterprise/jstests/external_auth/: dns_container_tester.js  iam_aws_faults.js  iam_aws_retry.js  iam_aws_retry_exception.js  iam_aws_retry_fail.js  iam_aws_rewind.js  iam_bad_url.js  iam_basic.js  iam_ec2_metadata.js  iam_ec2_metadata_faults.js  iam_ecs_metadata.js  iam_environment_variables.js  iam_partition.js  iam_temp_basic.js  iam_unresponsive_server.js  kerberos_tool.js  ldap_authz_authn.js  ldap_authz_bind.js  ldap_authz_bind6.js  ldap_authz_permissions.js  ldap_authz_query.js  ldap_authz_runtime_parameters.js  ldap_authz_timeout.js  ldap_disable_smoke_test.js  ldap_failover_degraded_performance.js  ldap_fastest_host_selection.js  ldap_insuffcient_access_rights.js  ldap_log_context.js  ldap_mongos_health_checking.js  ldap_mongos_health_checking_crash.js  ldap_omit_missing_roles_log.js  ldap_operation_stats.js  ldap_pooled_bind_timeout.js  ldap_provider_check.js  ldap_query_bind_rollover.js  ldap_reaper.js  ldap_referral.js  ldap_runtime_configuration.js  ldap_timeout_parameter_edge_cases.js  ldap_timeout_pooled.js  (+15 more)
src/mongo/db/modules/enterprise/jstests/external_auth_aws/: aws_e2e_assume_role.js  aws_e2e_ec2.js  aws_e2e_ecs.js  aws_e2e_regular_aws.js
src/mongo/db/modules/enterprise/jstests/external_auth_oidc/: oidc_auth.js  oidc_e2e_azure.js  oidc_e2e_okta.js  oidc_e2e_ping.js  oidc_internal_authz.js  oidc_key_management.js  oidc_omit_client_id.js  oidc_runtime_configuration.js  oidc_shell_integration.js  oidc_strict_api.js
src/mongo/db/modules/enterprise/jstests/external_auth_oidc_azure/: BUILD.bazel  README.md  oidc_e2e_azure.js  oidc_e2e_azure_machine.js
src/mongo/db/modules/enterprise/jstests/external_auth_oidc_gcp/: README.md  oidc_e2e_gcp_machine.js
src/mongo/db/modules/enterprise/jstests/fcbis/: fallback_to_logical_initial_sync.js  fcbis_applies_oplog_after_checkpoint.js  fcbis_cannot_vote_twice_same_term.js  fcbis_change_sync_source_in_initial_sync.js  fcbis_clear_appliedThrough_after_recovery.js  fcbis_cluster_server_parameters.js  fcbis_commit_prepared_transaction.js  fcbis_continues_sync_source_not_majority_committed.js  fcbis_correct_filtering_metadata_after_initial_sync.js  fcbis_election_during_storage_change.js  fcbis_fails_if_backup_cursor_is_already_open_on_sync_source.js  fcbis_fails_if_sync_source_restarts_while_backup_cursor_is_open.js  fcbis_gcm_encryption_keys_rollover.js  fcbis_initial_sync_node_becomes_primary.js  fcbis_initial_sync_survives_network_error.js  fcbis_mixed_version_sync.js  fcbis_no_local_db_access.js  fcbis_no_upstream_progress_updates.js  fcbis_nodes_contribute_to_liveness_majorities.js  fcbis_pauses_watchdog_checks_during_storage_change.js  fcbis_remove_newly_added.js  fcbis_restart_node_during_sync.js  fcbis_runs_completion_hook.js  (+13 more)
src/mongo/db/modules/enterprise/src/: auxprop_mongodb_internal.cpp  canon_mongodb_internal.cpp  gcrypt_init.cpp  mongo_gssapi.cpp  mongo_gssapi.h  mongo_sspi.cpp  sasl_authentication_session.cpp  sasl_authentication_session.h  sasl_authentication_session_gssapi_test.cpp  sasl_authentication_session_test.cpp  sasl_commands.cpp  sasl_privilege_commands_d.cpp  sasl_shell.cpp  sasl_shell.h  sasl_shell_authenticate_sm.cpp  sasl_shell_authenticate_v8.cpp  serverstatus_client.cpp  serverstatus_client.h  snmp.cpp  snmp.h  snmp_oid.cpp
src/mongo/db/pipeline/plugin/: BUILD.bazel  api.cpp  api.h  c_plugin.cpp  c_plugin.h  document_source_plugin.cpp  plugin.cpp  plugin.h
src/mongo/db/pipeline/plugin/rust_plugin/: BUILD.bazel
(+2113 files in other folders)
