load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen_library")

mongo_cc_library(
    name = "plugin",
    visibility = ["//visibility:public"],
    hdrs = [ "plugin.h" ],
    srcs = [ "plugin.cpp" ],
    deps = [
        ":api",
        "//src/mongo/db/pipeline/plugin/rust_plugin",
    ],
)

mongo_cc_library(
    name = "api",
    visibility = ["//visibility:public"],
    hdrs = [ "api.h" ],
)

rust_bindgen_library(
    name = "plugin_api_bindgen",
    visibility = ["//visibility:public"],
    cc_lib = ":api",
    header = ":api.h",
    bindgen_flags = [
        # Override ABI to C-unwind.
        # This allows us to safely call back into C++ code that may throw
        "--override-abi",
        ".*=C-unwind",
    ],
    clang_flags = [
        "-x",
        "c++",
    ],
    merge_cc_lib_objects_into_rlib = False,
)