package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_library", "rust_doc")

rust_library(
    name = "rust_plugin",
    srcs = glob([
        "src/*.rs",
        "src/**/*.rs",
    ]),
    deps = [
        "//src/mongo/db/pipeline/plugin:plugin_api_bindgen",
        "@plugin_crates//:linked-hash-map",
        "@plugin_crates//:bson",
        "@plugin_crates//:bytes",
        "@plugin_crates//:once_cell",
        "@plugin_crates//:reqwest",
        "@plugin_crates//:serde",
        "@plugin_crates//:tokio",
        "@plugin_crates//:tonic",
        "@plugin_crates//:babelfish",
        "@plugin_crates//:ast",
    ],
)

# NB: this could also be done with an aspect which is a bazelrc override I just don't want to do
# that here as it may affect build caching.
rust_clippy(
    name = "rust_plugin_clippy_test",
    testonly = True,
    deps = [":rust_plugin"],
)

rust_doc(
    name = "extension_doc",
    crate = ":rust_plugin",
)
