load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_benchmark", "mongo_cc_binary", "mongo_cc_library", "mongo_cc_unit_test")

package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "audit_config_gen",
    src = "audit_config.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/idl:generic_argument_gen",
    ],
)

idl_generator(
    name = "audit_commands_gen",
    src = "audit_commands.idl",
    deps = [
        ":audit_config_gen",
        "//src/mongo/db:basic_types_gen",
        "//src/mongo/idl:generic_argument_gen",
    ],
)

idl_generator(
    name = "audit_event_type_gen",
    src = "audit_event_type.idl",
)

idl_generator(
    name = "audit_header_options_gen",
    src = "audit_header_options.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

idl_generator(
    name = "audit_decryptor_options_gen",
    src = "audit_decryptor_options.idl",
)

idl_generator(
    name = "audit_options_gen",
    src = "audit_options.idl",
)

mongo_cc_library(
    name = "audit_config",
    srcs = [
        ":audit_config_gen",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mongo/db:server_base",
    ],
)

mongo_cc_library(
    name = "audit_enc_comp_manager",
    srcs = [
        "audit_enc_comp_manager.cpp",
        "audit_file_header.cpp",
        "audit_header_options_gen",
        "audit_key_manager_kmip.cpp",
        "audit_key_manager_local.cpp",
    ],
    hdrs = [
        "audit_enc_comp_manager.h",
        "audit_file_header.h",
        "audit_frame.h",
        "audit_key_manager.h",
        "audit_key_manager_kmip.h",
        "audit_key_manager_local.h",
        "audit_sequence_id.h",
        "//src/mongo/db:audit_format.h",
    ],
    deps = [
        "audit_config",
        "//src/mongo/db:server_base",
        "//src/mongo/db/modules/enterprise/src/encryptdb:key_acquisition",
        "//src/mongo/db/modules/enterprise/src/encryptdb:symmetric_crypto_enterprise",
        "//src/mongo/transport:message_compressor",
    ],
)

mongo_cc_library(
    name = "audit_enterprise",
    srcs = [
        "audit_client_attrs.cpp",
        "audit_command.cpp",
        "audit_commands_gen",
        "audit_event_type_gen",
        "audit_log.cpp",
        "audit_manager.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/logger:console.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/logger:rotatable_file_writer.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_application_message.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_authentication.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_authz_check.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_cluster_server_parameters.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_config_event.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_indexes_collections_databases.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_logout.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_metadata.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_mongo_event.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_replset.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_role_management.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_rotate_log.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_sharding.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_shutdown.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_startup.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_user_management.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_application_message.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_authentication.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_authz_check.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_cluster_server_parameters.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_config_event.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_indexes_collections_databases.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_logout.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_metadata.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_ocsf_event.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_replset.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_role_management.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_rotate_log.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_sharding.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_shutdown.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_startup.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_user_management.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:ocsf_audit_events_gen",
    ],
    hdrs = [
        "audit_client_attrs.h",
        "audit_deduplication.h",
        "audit_event_type.h",
        "audit_frame.h",
        "audit_manager.h",
        "audit_options.h",
        "audit_options_gen",
        "audit_sequence_id.h",
        "//src/mongo/db/modules/enterprise/src/audit:audit_log.h",
        "//src/mongo/db/modules/enterprise/src/audit/logger:appender.h",
        "//src/mongo/db/modules/enterprise/src/audit/logger:console.h",
        "//src/mongo/db/modules/enterprise/src/audit/logger:console_appender.h",
        "//src/mongo/db/modules/enterprise/src/audit/logger:encoder.h",
        "//src/mongo/db/modules/enterprise/src/audit/logger:mock_appender.h",
        "//src/mongo/db/modules/enterprise/src/audit/logger:rotatable_file_writer.h",
        "//src/mongo/db/modules/enterprise/src/audit/logger:syslog_appender.h",
        "//src/mongo/db/modules/enterprise/src/audit/mongo:audit_mongo.h",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:audit_ocsf.h",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:ocsf_constants.h",
        "//src/mongo/db/modules/enterprise/src/audit/ocsf:ocsf_process_activity_constants.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "audit_config",
        "audit_enc_comp_manager",
        "//src/mongo/db:audit",
        "//src/mongo/db:multitenancy",
        "//src/mongo/db:query_expressions",
        "//src/mongo/db:server_base",
        "//src/mongo/db/auth",
        "//src/mongo/db/auth:authprivilege",
        "//src/mongo/db/query/write_ops:write_ops_parsers",
        "//src/mongo/db/repl:repl_coordinator_interface",
        "//src/mongo/db/repl:repl_settings",
        "//src/mongo/idl:cluster_server_parameter",
        "//src/mongo/transport:message_compressor",
        "//src/mongo/transport:transport_layer",
        "//src/mongo/util/net:network",
        "//src/mongo/util/options_parser",
    ],
)

# The auditing code needs to be built into the "coredb" library because there is code in there that
# references audit functions.  However, the "coredb" library is also currently shared by server
# programs, such as mongod and mongos, as well as client programs, such as mongodump and
# mongoexport.  For these reasons, we have no choice but to build the audit module into all of
# these, even though it's dead code in the client programs.  To avoid actually allowing the user to
# configure this dead code, we need to separate the option registration into this
# "audit_configuration" library and add it to only mongod and mongos.  Because audit defaults to
# disabled this effectively prevents this code from being run in client programs.
mongo_cc_library(
    name = "audit_configuration",
    srcs = [
        "audit_options.cpp",
        "audit_options_gen",
        "audit_watchdog.cpp",
    ],
    hdrs = [
        "audit_options.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "audit_config",
        "audit_enterprise",
        "//src/mongo/db:server_base",
        "//src/mongo/db:server_feature_flags",
        "//src/mongo/db/commands:test_commands_enabled",
        "//src/mongo/util/options_parser",
        "//src/mongo/watchdog:watchdog_register",
    ],
)

mongo_cc_library(
    name = "audit_mongos",
    srcs = [
        "audit_mongos.cpp",
    ],
    hdrs = [
        "audit_config_command.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "audit_config",
        "audit_enterprise",
        "//src/mongo/db:commands",
        "//src/mongo/db:dbdirectclient",
        "//src/mongo/db/auth",
        "//src/mongo/db/auth:authprivilege",
        "//src/mongo/idl:cluster_server_parameter_refresher",
        "//src/mongo/s:grid",
    ],
)

mongo_cc_library(
    name = "audit_mongod",
    srcs = [
        "audit_mongod.cpp",
    ],
    hdrs = [
        "audit_config_command.h",
        "audit_mongod.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "audit_enc_comp_manager",
        "audit_enterprise",
        "//src/mongo/db:commands",
        "//src/mongo/db:dbdirectclient",
        "//src/mongo/db:dbhelpers",
        "//src/mongo/db:shard_role",
        "//src/mongo/db/auth",
        "//src/mongo/db/auth:authprivilege",
        "//src/mongo/db/commands:cluster_server_parameter_commands_invocation",
        "//src/mongo/db/op_observer",
        "//src/mongo/db/repl:replica_set_aware_service",
        "//src/mongo/db/s:forwardable_operation_metadata",
        "//src/mongo/db/s:sharding_commands_d",
        "//src/mongo/s/write_ops:batch_write_types",
    ],
)

mongo_cc_library(
    name = "audit_key_manager_mock",
    srcs = [
        "audit_key_manager_mock.cpp",
    ],
    hdrs = [
        "audit_key_manager.h",
        "audit_key_manager_mock.h",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/crypto:symmetric_crypto",
    ],
)

mongo_cc_unit_test(
    name = "audit_test",
    srcs = [
        "audit_client_attrs_test.cpp",
        "audit_enc_comp_manager_test.cpp",
        "audit_file_header_test.cpp",
        "audit_key_manager_test.cpp",
        "audit_output_test.cpp",
        "audit_sequence_id_test.cpp",
        "//src/mongo/db/modules/enterprise/src/audit/logger:rotatable_file_writer_test.cpp",
    ],
    tags = ["mongo_unittest_second_group"],
    deps = [
        ":audit_config",
        ":audit_enc_comp_manager",
        ":audit_enterprise",
        ":audit_key_manager_mock",
        ":audit_mongod",
        "//src/mongo/crypto:symmetric_crypto",
        "//src/mongo/db:change_stream_options_manager",
        "//src/mongo/db:server_base",
        "//src/mongo/db:service_context_d_test_fixture",
        "//src/mongo/db:service_context_test_fixture",
        "//src/mongo/db/auth:authmocks",
        "//src/mongo/db/auth:authorization_session_test_fixture",
        "//src/mongo/db/auth:authprivilege",
        "//src/mongo/db/catalog:catalog_helpers",
        "//src/mongo/db/commands:create_command",
        "//src/mongo/db/modules/enterprise/src/encryptdb:key_acquisition",
        "//src/mongo/db/modules/enterprise/src/encryptdb:symmetric_crypto_enterprise",
        "//src/mongo/db/op_observer:op_observer_util",
        "//src/mongo/db/repl:oplog",
        "//src/mongo/db/repl:oplog_interface_local",
        "//src/mongo/db/repl:replmocks",
        "//src/mongo/db/repl:storage_interface_impl",
        "//src/mongo/idl:cluster_server_parameter",
        "//src/mongo/idl:server_parameter_test_util",
        "//src/mongo/transport:transport_layer_mock",
        "//src/mongo/util:signal_handlers",
        "//src/mongo/util/options_parser",
    ],
)

mongo_cc_binary(
    name = "mongoauditdecrypt",
    srcs = [
        "audit_decryptor.cpp",
        "audit_decryptor_options.cpp",
        "audit_decryptor_options.h",
        "audit_decryptor_options_gen",
    ],
    # + env.WindowsResourceFile("decryptor_tool.rc"),
    tags = [
        "dist_test",
    ],
    deps = [
        "audit_enc_comp_manager",
        "//src/mongo/db:log_process_details",
        "//src/mongo/db:server_base",
        "//src/mongo/db/concurrency:lock_manager",
        "//src/mongo/util:signal_handlers",
        "//src/mongo/util:version_impl",
        "//src/mongo/util/options_parser:options_parser_init",
    ],
)

mongo_cc_binary(
    name = "console_test",
    srcs = [
        "//src/mongo/db/modules/enterprise/src/audit/logger:console_test.cpp",
    ],
    tags = [
        "standalone-console-test",
    ],
    deps = [
        "audit_enterprise",
        "//src/mongo:base",
        "//src/mongo/db:audit",
        "//src/mongo/unittest:unittest_main",
    ],
)

mongo_cc_benchmark(
    name = "audit_bm",
    srcs = [
        "audit_bm.cpp",
        "audit_bm_fixture.cpp",
        "audit_bm_fixture.h",
    ],
    deps = [
        "audit_enterprise",
        "//src/mongo/db:audit",
        "//src/mongo/db/auth:authmocks",
        "//src/mongo/transport:transport_layer_mock",
        "//src/mongo/unittest",
    ],
)
